# DEVS_complimentary_filter

./: .gitignore  .gitmodules  .mbed  CMakeLists.txt  cadmium.json  mbed_app.json  parse.py  parse_hardware_output.py  parse_output.py  plot_output.py
algorithms/: complimentary_filter.hpp  majority_vote.hpp
atomics/: accelerometer.hpp  complimentary_filter.hpp  fusion_controller.hpp  gyroscope.hpp  imu_controller.hpp  majority_vote_controller.hpp
data_structures/: message.cpp  message.hpp
drivers/: driver.hpp
include/algorithm/: complimentary_filter.hpp
include/atomic_model/: accelerometer.hpp  fusion_controller.hpp  gyroscope.hpp  imu_controller.hpp
src/: main.cpp
top_model/: DEVS-complimentary-filter  DEVS_complimentary_filter  main.cpp  makefile
top_model/inputs/: accelerometer_x.txt  accelerometer_x_1.txt  accelerometer_x_2.txt  accelerometer_x_3.txt  accelerometer_x_5.txt  accelerometer_y.txt  accelerometer_y_1.txt  accelerometer_y_2.txt  accelerometer_y_3.txt  accelerometer_y_4.txt  accelerometer_y_5.txt  accelerometer_z.txt  accelerometer_z_1.txt  accelerometer_z_2.txt  accelerometer_z_3.txt  accelerometer_z_4.txt  accelerometer_z_5.txt  gyroscope_x.txt  gyroscope_x_1.txt  gyroscope_x_2.txt  gyroscope_x_3.txt  gyroscope_x_4.txt  gyroscope_x_5.txt  gyroscope_y.txt  gyroscope_y_1.txt  gyroscope_y_2.txt  gyroscope_y_3.txt  gyroscope_y_4.txt  gyroscope_y_5.txt  gyroscope_z.txt  gyroscope_z_1.txt  gyroscope_z_2.txt  gyroscope_z_3.txt  gyroscope_z_4.txt  gyroscope_z_5.txt  mpu_reading.txt
top_model/outputs/: .~lock.simulation_data.xlsx#  DEVS_complimentary_filter_output.txt  DEVS_complimentary_output_messages.txt  DEVS_complimentary_output_state.txt  SensorFusion_Cadmium_output.txt  simulation_data.xlsx
